tests/baselines/reference/parserES5ComputedPropertyName2.errors.txt
tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName2.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/parser/ecmascript5/ComputedPropertyNames/parserES5ComputedPropertyName2.ts (1 errors) ====
    var v = { [e]: 1 };
              ~~~
!!! error TS9002: Computed property names are not currently supported.